--- a/package.json
+++ b/package.json
@@ -58,9 +58,12 @@
     "aos": "^2.3.4",
     "graph-modal": "^1.0.4",
     "graph-tabs": "^1.0.0",
+    "gsap": "^3.10.4",
     "inputmask": "^5.0.7",
+    "intl-tel-input": "^17.0.16",
     "just-validate": "^3.3.3",
     "rellax": "^1.12.1",
+    "scrollreveal": "^4.0.9",
     "simplebar": "^5.3.6",
     "smooth-scroll": "^16.1.3",
     "swiped-events": "^1.1.6",
